<resources>
    <string name="app_name">RemoteVideoCam</string>
    <string name="display">Display</string>
    <string name="camera">Camera</string>
    <string name="camera_screen">Camera Screen</string>
    <string name="display_screen">Display Screen</string>
    <string name="activity_name">Remote Video Cam</string>
    <string name="camera_and_location_rationale">Some permissions are needed to run this application. You will be asked to grant them.</string>
    <string name="returned_from_app_settings_to_activity">Returned from settings</string>
    <string name="connecting_to_display">Connecting to Display...</string>
    <string name="connecting_to_camera">Connecting to Camera...</string>
    <string name="connecting">Connecting...</string>
    <string name="waiting_got_other_device_to_connect">Waiting for other\ndevice to connect...</string>
    <string name="notify_title">Motion Detected</string>
    <string name="notify_content_text_timestamp">At %1$s</string>
    <string name="connection_type">Connection Type</string>
    <string name="connection_auto">Auto (Recommended)</string>
    <string name="connection_network">WiFi (NSD)</string>
    <string name="connection_wifi_direct">WiFi Direct</string>
    <string name="connection_wifi_aware">WiFi Aware</string>
</resources>