<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/connection_type"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/connection_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_auto"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/radio_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_network"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/radio_wifi_direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_wifi_direct"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/radio_wifi_aware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_wifi_aware"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:padding="8dp" />
    </RadioGroup>

</LinearLayout>
